style: Correctly align main navigation

--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ ul {
   width: 24%;
   text-align: center;
   line-height: 24px;
-  padding: 24px;
+  padding: 24px 0;
   text-transform: uppercase;
 }
 
